[workspace]
resolver = "2"
members = [
    "contracts/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["AuraLend Protocol"]
repository = "https://github.com/auralend/auralend"
rust-version = "1.85"

[workspace.dependencies]
soroban-sdk = "26.1.0"
stellar-access = "0.7.2"
stellar-tokens = "0.7.2"
stellar-contract-utils = "0.7.2"
stellar-macros = "0.7.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
